tests/data/invalid_dtds/parameter_entities_external_3/test.dtd
<!ENTITY % external3 PUBLIC bad "foo">
